@@ -7,10 +7,17 @@ import com.company.banking.apigateway.application.port.out.ApiKeyPersistencePort
 import com.company.banking.apigateway.domain.ApiKey;
 import com.company.banking.account.application.port.out.AccountPersistencePort;
 import com.company.banking.account.domain.Account;
+import com.company.banking.merchant.application.port.out.MerchantPersistencePort;
+import com.company.banking.merchant.domain.Merchant;
+import com.company.banking.common.exception.BusinessException;
+import com.company.banking.common.exception.ErrorCode;
+import com.company.banking.common.exception.ForbiddenException;
+import com.company.banking.common.exception.NotFoundException;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
+import java.math.BigDecimal;
 import java.nio.charset.StandardCharsets;
 import java.security.MessageDigest;
 import java.security.NoSuchAlgorithmException;
@@ -18,6 +25,7 @@ import java.security.SecureRandom;
 import java.time.LocalDateTime;
 import java.util.HexFormat;
 import java.util.List;
+import java.util.UUID;
 
 @Service
 @RequiredArgsConstructor
@@ -25,6 +33,7 @@ public class CreateApiKeyService implements CreateApiKeyUseCase {
 
     private final ApiKeyPersistencePort persistencePort;
     private final AccountPersistencePort accountPersistencePort;
+    private final MerchantPersistencePort merchantPersistencePort;
     private final SecureRandom secureRandom = new SecureRandom();
 
     @Override
@@ -33,6 +42,67 @@ public class CreateApiKeyService implements CreateApiKeyUseCase {
         String env = request.getEnvironment() != null && request.getEnvironment().equalsIgnoreCase("LIVE") ? "LIVE" : "SANDBOX";
         String prefix = env.equals("LIVE") ? "sk_live_" : "sk_test_";
 
+        // 1. Resolve and Verify Authoritative Merchant Identity
+        Merchant merchant = merchantPersistencePort.findById(merchantId)
+                .orElseThrow(() -> new NotFoundException("Merchant with ID " + merchantId + " not found."));
+
+        // 2. Strict Security Boundary for LIVE Credentials (BSP Open Finance & Merchant Acquiring Invariant)
+        if (env.equals("LIVE")) {
+            if (!"ACTIVE".equalsIgnoreCase(merchant.getStatus())) {
+                throw new BusinessException(ErrorCode.FORBIDDEN, 
+                        "LIVE production credentials require an ACTIVE, approved Merchant status. Current status: " + merchant.getStatus());
+            }
+            // Require non-temporary, verified legal registration number
+            String brn = merchant.getBusinessRegistrationNumber();
+            if (brn == null || brn.isBlank() || brn.startsWith("DEV-REG-") || brn.startsWith("DEV-")) {
+                throw new BusinessException(ErrorCode.FORBIDDEN, 
+                        "LIVE production credentials require a verified Business Registration Number (BIR TIN / BRN). Complete merchant onboarding before issuing LIVE credentials.");
+            }
+        }
+
+        // 3. Granular Scopes Enforcement (Reject ambiguous or non-canonical scopes)
+        if (request.getScopes() != null && request.getScopes().contains("API_ACCESS")) {
+            throw new BusinessException(ErrorCode.INVALID_REQUEST, 
+                    "Non-canonical scope 'API_ACCESS' is prohibited. Specify explicit granular scopes (e.g. accounts:read, payments:write).");
+        }
+
+        // 4. Account Scope Boundary Validation
+        String resolvedAccount = request.getLinkedAccountId() != null ? request.getLinkedAccountId().trim() : null;
+        if ((resolvedAccount == null || resolvedAccount.isEmpty()) && env.equals("LIVE")) {
+            if (merchant.getSettlementAccount() != null && !merchant.getSettlementAccount().isBlank()) {
+                resolvedAccount = merchant.getSettlementAccount();
+            } else if (merchant.getOwnerId() != null) {
+                List<Account> ownerAccounts = accountPersistencePort.findByCustomerId(merchant.getOwnerId());
+                if (ownerAccounts != null && !ownerAccounts.isEmpty()) {
+                    resolvedAccount = ownerAccounts.get(0).getAccountNumber();
+                }
+            }
+            if (resolvedAccount == null || resolvedAccount.isEmpty()) {
+                throw new BusinessException(ErrorCode.INVALID_REQUEST, 
+                        "LIVE production credentials must be bound to a designated merchant settlement account.");
+            }
+        }
+        final String effectiveLinkedAccount = resolvedAccount;
+
+        if (effectiveLinkedAccount != null && !effectiveLinkedAccount.isEmpty()) {
+            Account account = accountPersistencePort.findByAccountNumber(effectiveLinkedAccount)
+                    .orElseThrow(() -> new NotFoundException("Account '" + effectiveLinkedAccount + "' not found."));
+
+            // Never permit external binding to system GL accounts
+            if (account.getAccountNumber().startsWith("SYS-") || account.getAccountNumber().startsWith("GL-")) {
+                throw new ForbiddenException("Cannot bind external API credentials to internal system General Ledger accounts.");
+            }
+
+            boolean authorized = merchantId.equals(account.getMerchantId());
+            if (!authorized && account.getCustomerId() != null) {
+                authorized = account.getCustomerId().equals(merchant.getOwnerId());
+            }
+            if (!authorized) {
+                throw new ForbiddenException(ErrorCode.ACCOUNT_NOT_AUTHORIZED, "Not authorized to bind API key to account [" + effectiveLinkedAccount + "].");
+            }
+        }
+
+        // 5. Cryptographic Key Generation (Entropy: 256-bit SecureRandom CSPRNG)
         byte[] randomBytes = new byte[32];
         secureRandom.nextBytes(randomBytes);
         String rawSecret = HexFormat.of().formatHex(randomBytes);
@@ -46,14 +116,21 @@ public class CreateApiKeyService implements CreateApiKeyUseCase {
                 ? request.getCidrWhitelist().trim()
                 : "0.0.0.0/0";
 
-        // VAM Boundary Authorization Check
-        if (request.getLinkedAccountId() != null && !request.getLinkedAccountId().trim().isEmpty()) {
-            Account account = accountPersistencePort.findByAccountNumber(request.getLinkedAccountId().trim())
-                    .orElseThrow(() -> new com.company.banking.common.exception.NotFoundException("Account '" + request.getLinkedAccountId().trim() + "' not found."));
-            if (!merchantId.equals(account.getMerchantId())) {
-                throw new com.company.banking.common.exception.ForbiddenException("Not authorized to bind API key to this account");
-            }
-        }
+        // Application Identity
+        String appId = request.getApplicationId() != null && !request.getApplicationId().isBlank()
+                ? request.getApplicationId().trim()
+                : "app_" + UUID.randomUUID().toString().substring(0, 8);
+        String appName = request.getApplicationName() != null && !request.getApplicationName().isBlank()
+                ? request.getApplicationName().trim()
+                : request.getName();
+
+        // Transaction Limits Defaults
+        BigDecimal perTxLimit = request.getPerTransactionLimit() != null 
+                ? request.getPerTransactionLimit() 
+                : (env.equals("LIVE") ? new BigDecimal("100000.00") : new BigDecimal("50000.00"));
+        BigDecimal dailyLimit = request.getDailyLimit() != null 
+                ? request.getDailyLimit() 
+                : (env.equals("LIVE") ? new BigDecimal("1000000.00") : new BigDecimal("500000.00"));
 
         ApiKey domain = ApiKey.builder()
                 .keyPrefix(prefix)
@@ -63,7 +140,11 @@ public class CreateApiKeyService implements CreateApiKeyUseCase {
                 .environment(env)
                 .cidrWhitelist(cidr)
                 .scopes(request.getScopes())
-                .linkedAccountId(request.getLinkedAccountId()) // <-- BIND IT
+                .linkedAccountId(effectiveLinkedAccount)
+                .applicationId(appId)
+                .applicationName(appName)
+                .perTransactionLimit(perTxLimit)
+                .dailyLimit(dailyLimit)
                 .expiresAt(expiresAt)
                 .createdAt(LocalDateTime.now())
                 .build();
@@ -80,6 +161,10 @@ public class CreateApiKeyService implements CreateApiKeyUseCase {
                 .cidrWhitelist(saved.getCidrWhitelist())
                 .scopes(saved.getScopes())
                 .linkedAccountId(saved.getLinkedAccountId())
+                .applicationId(saved.getApplicationId())
+                .applicationName(saved.getApplicationName())
+                .perTransactionLimit(saved.getPerTransactionLimit())
+                .dailyLimit(saved.getDailyLimit())
                 .expiresAt(saved.getExpiresAt())
                 .revokedAt(saved.getRevokedAt())
                 .lastUsedAt(saved.getLastUsedAt())
@@ -97,10 +182,14 @@ public class CreateApiKeyService implements CreateApiKeyUseCase {
                     .environment(key.getEnvironment())
                     .keyPrefix(key.getKeyPrefix())
                     .maskedHash("************************" + key.getKeyHash().substring(Math.max(0, key.getKeyHash().length() - 4)))
-                    .rawKey(null) // Never expose raw key on listing
+                    .rawKey(null) // Security: Never expose raw key on listing
                     .cidrWhitelist(key.getCidrWhitelist())
                     .scopes(key.getScopes())
-                    .linkedAccountId(key.getLinkedAccountId()) // <-- RETURN IT
+                    .linkedAccountId(key.getLinkedAccountId())
+                    .applicationId(key.getApplicationId())
+                    .applicationName(key.getApplicationName())
+                    .perTransactionLimit(key.getPerTransactionLimit())
+                    .dailyLimit(key.getDailyLimit())
                     .expiresAt(key.getExpiresAt())
                     .revokedAt(key.getRevokedAt())
                     .lastUsedAt(key.getLastUsedAt())
@@ -113,9 +202,9 @@ public class CreateApiKeyService implements CreateApiKeyUseCase {
     @Transactional
     public void revokeApiKey(Long merchantId, Long id) {
         ApiKey key = persistencePort.findById(id)
-                .orElseThrow(() -> new com.company.banking.common.exception.NotFoundException("API Key not found"));
+                .orElseThrow(() -> new NotFoundException("API Key not found"));
         if (!key.getMerchantId().equals(merchantId)) {
-            throw new com.company.banking.common.exception.ForbiddenException("Not authorized to access this API Key");
+            throw new ForbiddenException("Not authorized to access this API Key");
         }
         key.setRevokedAt(LocalDateTime.now());
         persistencePort.save(key);
@@ -125,18 +214,24 @@ public class CreateApiKeyService implements CreateApiKeyUseCase {
     @Transactional
     public ApiKeyResponse rotateApiKey(Long merchantId, Long id) {
         ApiKey oldKey = persistencePort.findById(id)
-                .orElseThrow(() -> new com.company.banking.common.exception.NotFoundException("API Key not found"));
+                .orElseThrow(() -> new NotFoundException("API Key not found"));
 
         if (!oldKey.getMerchantId().equals(merchantId)) {
-            throw new com.company.banking.common.exception.ForbiddenException("Not authorized to access this API Key");
+            throw new ForbiddenException("Not authorized to access this API Key");
         }
 
         // Re-verify the user has not lost access to the account since initial creation
         if (oldKey.getLinkedAccountId() != null && !oldKey.getLinkedAccountId().trim().isEmpty()) {
             Account account = accountPersistencePort.findByAccountNumber(oldKey.getLinkedAccountId().trim())
-                    .orElseThrow(() -> new com.company.banking.common.exception.NotFoundException("Account '" + oldKey.getLinkedAccountId().trim() + "' not found."));
-            if (!merchantId.equals(account.getMerchantId())) {
-                throw new com.company.banking.common.exception.ForbiddenException("Not authorized to rotate API key bound to this account");
+                    .orElseThrow(() -> new NotFoundException("Account '" + oldKey.getLinkedAccountId().trim() + "' not found."));
+            
+            Merchant merchant = merchantPersistencePort.findById(merchantId).orElse(null);
+            boolean authorized = merchantId.equals(account.getMerchantId());
+            if (!authorized && account.getCustomerId() != null && merchant != null) {
+                authorized = account.getCustomerId().equals(merchant.getOwnerId());
+            }
+            if (!authorized) {
+                throw new ForbiddenException("Not authorized to rotate API key bound to this account");
             }
         }
 
@@ -151,6 +246,10 @@ public class CreateApiKeyService implements CreateApiKeyUseCase {
         req.setCidrWhitelist(oldKey.getCidrWhitelist());
         req.setScopes(oldKey.getScopes());
         req.setLinkedAccountId(oldKey.getLinkedAccountId());
+        req.setApplicationId(oldKey.getApplicationId());
+        req.setApplicationName(oldKey.getApplicationName());
+        req.setPerTransactionLimit(oldKey.getPerTransactionLimit());
+        req.setDailyLimit(oldKey.getDailyLimit());
 
         return createApiKey(merchantId, req);
     }
